src/ifcc-test-output/testfiles_declarations-7_double-declaration/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:9: error: redeclaration of ‘b’ with no linkage
    3 |     int b;
      |         ^
input.c:2:9: note: previous declaration of ‘b’ with type ‘int’
    2 |     int b;
      |         ^

exit status: 1
